# chambercourt

./: .gitignore  Cookbook.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
browser/: README.md  index.html
chambercourt/: __init__.py  __main__.py  chambercourt_game.py  event.py  game.py  langdetect.py  ptext.py  raw_version.py  screen.py  warnings_util.py
chambercourt/levels/: 01 Plain map.tmx  02 Another plain map.tmx  02 Plain map.tmx  Tileset.tsx
po/: chambercourt.pot.in  el.po  fr.po
