[project]
name = "ChamberCourt"
version = "0.9.2"
description = "Simple 2D grid game framework based on PyGame"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/chambercourt"}
requires-python = ">= 3.11"
dependencies = [
    "aenum",
    "i18nparse",
    "importlib-resources >= 5.10",
    "platformdirs",
    "pygame >= 2.0.0",
    "pyscroll",
    "pytmx",
]
classifiers = [
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
]

[project.scripts]
chambercourt = "chambercourt:main"

[build-system]
requires = [
    "build",
    "setuptools >= 62.3.0",
]

[tool.setuptools]
packages = [
    "chambercourt",
]

[tool.setuptools.package-data]
chambercourt = ["**/*.png", "**/*.wav", "**/*.tmx", "**/*.tsx", "**/*.ttf", "**/*.mo", "py.typed"]

[tool.mypy]
exclude = ['^dist', '^build']
strict = true

[[tool.mypy.overrides]]
module = "chambercourt.ptext"
ignore_errors = true

[tool.pylint.main]
# Use multiple processes to speed up Pylint: 0 = auto-detect.
jobs = 0
ignore-paths = ["chambercourt/ptext.py"]

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append(".")'

[tool.pylint.format]
const-naming-style = "any"
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-member",
    "fixme",
    "global-statement",
    "redefined-outer-name",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-statements",
]
enable = [
    "useless-suppression",
]

[[tool.cxfreeze.executables]]
script = "chambercourt/__main__.py"
base = "gui"
icon = "app-icon"
shortcut_name = "ChamberCourt"
shortcut_dir = "DesktopFolder"

[tool.cxfreeze.build_exe]
include_msvcr = true
